<resources>
    <string name="app_name">VPeYR545J</string>
    <string name="contentDesc">background</string>
    <string name="settings">Settings</string>
    <string name="letters">Letters</string>
    <string name="uppercase">Uppercase</string>
    <string name="numbers">Numbers</string>
    <string name="generate">Generate</string>
    <string name="specials">Specials</string>
    <string name="password">Password</string>
    <string name="menu_characters">Characters</string>
    <string name="menu_characters_letters">Letters</string>
    <string name="menu_characters_uppercase">Uppercase</string>
    <string name="menu_characters_numbers">Numbers</string>
    <string name="menu_characters_specials">Specials</string>
    <string name="menu_lengths">Lengths</string>
</resources>