<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/characters"
        android:checkable="false"
        android:checked="false"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_characters">
        <menu>
            <item
                android:id="@+id/character_letters"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/menu_characters_letters" />
            <item
                android:id="@+id/character_uppercase"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_upload"
                android:title="@string/menu_characters_uppercase" />
            <item
                android:id="@+id/character_numbers"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_month"
                android:title="@string/menu_characters_numbers" />
            <item
                android:id="@+id/character_specials"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_view"
                android:title="@string/menu_characters_specials" />
        </menu>
    </item>
    <item
        android:id="@+id/lengths"
        android:checkable="false"
        android:icon="?attr/actionModeCutDrawable"
        android:title="@string/menu_lengths">
        <menu>
            <group android:id="@+id/length_group">
                <item
                    android:id="@+id/length_6"
                    android:checkable="true"
                    android:orderInCategory="1"
                    android:title="6" />
                <item
                    android:id="@+id/length_8"
                    android:checkable="true"
                    android:orderInCategory="2"
                    android:title="8" />
                <item
                    android:id="@+id/length_10"
                    android:checkable="true"
                    android:orderInCategory="3"
                    android:title="10" />
                <item
                    android:id="@+id/length_14"
                    android:checkable="true"
                    android:orderInCategory="4"
                    android:title="14" />
                <item
                    android:id="@+id/length_18"
                    android:checkable="true"
                    android:orderInCategory="5"
                    android:title="18" />
                <item
                    android:id="@+id/length_20"
                    android:checkable="true"
                    android:orderInCategory="6"
                    android:title="20" />
            </group>
        </menu>
    </item>
</menu>